--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 alembic==1.14.0
 async-timeout==4.0.3
+asyncpg==0.30.0
 attrs==24.2.0
 Babel==2.9.1
 certifi==2024.8.30
@@ -10,6 +11,8 @@ charset-normalizer==3.4.0
 databases==0.9.0
 environs==11.2.0
 frozenlist==1.5.0
+geographiclib==2.0
+geopy==2.4.1
 idna==3.10
 magic-filter==1.0.12
 Mako==1.3.6
@@ -18,8 +21,11 @@ marshmallow==3.23.1
 multidict==6.1.0
 packaging==24.2
 propcache==0.2.0
+psycopg2==2.9.10
 python-dotenv==1.0.1
 pytz==2024.2
+requests==2.32.3
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+urllib3==2.2.3
 yarl==1.17.2
