--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-aiogram==2.25.1
-aiohttp==3.8.6
+aiofiles==24.1.0
+aiogram==3.15.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.11
 aiosignal==1.3.1
 alembic==1.14.0
+annotated-types==0.7.0
 async-timeout==4.0.3
 asyncpg==0.30.0
 attrs==24.2.0
@@ -22,6 +25,8 @@ multidict==6.1.0
 packaging==24.2
 propcache==0.2.0
 psycopg2==2.9.10
+pydantic==2.9.2
+pydantic_core==2.23.4
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
