--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/telegram-bot:latest
+        tags: ${{ secrets.DOCKERHUB_USER }}/telegram-bot:latest
 
   deploy:
     runs-on: ubuntu-latest
