--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,23 +34,27 @@ jobs:
     needs: build
 
     steps:
-    - name: Deploy to DigitalOcean
-      uses: appleboy/ssh-action@v0.1.11
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Set up SSH Agent
+      uses: webfactory/ssh-agent@v0.5.3
       with:
-        host: 138.197.184.77
-        username: root
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        script: |
-          # Ensure the network exists
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Deploy to DigitalOcean
+      run: |
+        # SSH into the droplet and perform deployment
+        ssh -o StrictHostKeyChecking=no root@138.197.184.77 <<EOF
+          # Ensure the Docker network exists
           docker network inspect telegram_network >/dev/null 2>&1 || docker network create telegram_network
-  
-          # Pull the latest image
+          
+          # Pull the latest Docker image
           docker pull ${{ secrets.DOCKER_USERNAME }}/telegram-bot:latest
-  
-          # Stop and remove old container if exists
+          
+          # Stop and remove the old container if it exists
           docker ps -q --filter "name=telegram_bot" | grep -q . && docker stop telegram_bot && docker rm telegram_bot
-  
+          
           # Run the new container
           docker run -d --name telegram_bot \
             --env-file /root/n50_bellissimo/.env \
@@ -58,7 +62,8 @@ jobs:
             --restart=always \
             ${{ secrets.DOCKER_USERNAME }}/telegram-bot:latest \
             sh -c "alembic upgrade head && pybabel compile -d locale -D lang && python app.py"
-  
+          
           # Optional: Display logs for debugging
           sleep 5
           docker logs telegram_bot
+        EOF
